Add title by Thung

--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@
                                             <div class="work-popup-content">
                                                 <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                                 <div class="margin-b-30">
-                                                    <h3 class="margin-b-5">Monitor Machine</h3>
-                                                    <span>xxxxxxx.</span>
+                                                    <h3 class="margin-b-5">Stock Compound</h3>
+                                                    <span>Plan Mixxer Rubber.</span>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -641,8 +641,8 @@
                                             <div class="work-popup-content">
                                                 <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                                 <div class="margin-b-30">
-                                                    <h3 class="margin-b-5">Monitor Machine</h3>
-                                                    <span>xxxxxxx.</span>
+                                                    <h3 class="margin-b-5">Remote Computer</h3>
+                                                    <span>Virtual Network Computing.</span>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -677,8 +677,8 @@
                                             <div class="work-popup-content">
                                                 <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                                 <div class="margin-b-30">
-                                                    <h3 class="margin-b-5">Monitor Machine</h3>
-                                                    <span>xxxxxxx.</span>
+                                                    <h3 class="margin-b-5">CNC</h3>
+                                                    <span>Plan CNC</span>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -763,8 +763,8 @@
                                             <div class="work-popup-content">
                                                 <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                                 <div class="margin-b-30">
-                                                    <h3 class="margin-b-5">KPT Worldwide</h3>
-                                                    <span>xxxxxxx.</span>
+                                                    <h3 class="margin-b-5">E-Office</h3>
+                                                    <span>Aerothai</span>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -802,17 +802,17 @@
                                             <div class="work-popup-content">
                                                 <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                                 <div class="margin-b-30">
-                                                    <h3 class="margin-b-5">KPT Worldwide</h3>
-                                                    <span>xxxxxxx.</span>
+                                                    <h3 class="margin-b-5">E-Office</h3>
+                                                    <span>KPT Worldwide</span>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                         <div class="row">
                                                             <div class="col-sm-6 sm-margin-b-20">
-                                                                <img class="full-width img-responsive" src="img/work/winapp/kptmenu.png" alt="Portfolio Image">
+                                                                <img class="full-width img-responsive" src="img/work/webapp/kptmenu.png" alt="Portfolio Image">
                                                             </div>
                                                             <div class="col-sm-6 sm-margin-b-20">
-                                                                <img class="full-width img-responsive" src="img/work/winapp/kptstock.png" alt="Portfolio Image">
+                                                                <img class="full-width img-responsive" src="img/work/webapp/kptstock.png" alt="Portfolio Image">
                                                             </div>
                                                         </div>                                                            
                                                         <p>The web is used within the organization to facilitate the employees will have many systems, for example Leave Online System, Stock equipment, CCTV, Email, Training, HR etc.</p>                                                        
@@ -843,8 +843,8 @@
                                             <div class="work-popup-content">
                                                 <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                                 <div class="margin-b-30">
-                                                    <h3 class="margin-b-5">Arduino SMS System</h3>
-                                                    <span>xxxxxxx.</span>
+                                                    <h3 class="margin-b-5">Pocket PC</h3>
+                                                    <span>Smart Device</span>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -881,8 +881,8 @@
                                             <div class="work-popup-content">
                                                 <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                                 <div class="margin-b-30">
-                                                    <h3 class="margin-b-5">Arduino SMS System</h3>
-                                                    <span>xxxxxxx.</span>
+                                                    <h3 class="margin-b-5">WCF</h3>
+                                                    <span>Windows Communication Foundation</span>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
@@ -920,8 +920,8 @@
                                             <div class="work-popup-content">
                                                 <a href="javascript:void(0);" class="work-popup-close">Hide</a>
                                                 <div class="margin-b-30">
-                                                    <h3 class="margin-b-5">Arduino SMS System</h3>
-                                                    <span>xxxxxxx.</span>
+                                                    <h3 class="margin-b-5">Arduino</h3>
+                                                    <span>SMS System</span>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
