Add picture micro

--- a/index.html
+++ b/index.html
@@ -1169,7 +1169,7 @@
                                 <!--End maintenance Aerothai-->
 
                                 <!--maintenance1-->
-                                <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 margin-b-4 element-item maintenance" data-category="maintenance">
+                                <!--<div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 margin-b-4 element-item maintenance" data-category="maintenance">
                                     <div class="work work-popup-trigger">
                                         <div class="work-overlay">                                            
                                             <img class="full-width img-responsive" src="img/work/micro/arduinoSMS.jpg" alt="Portfolio Image">
@@ -1204,7 +1204,7 @@
                                             </div>
                                         </div>                                        
                                     </div>
-                                </div>
+                                </div>-->
                                 <!--End maintenance1-->
                                                                
                                 <!-----------------------------------------------------End Maintenance----------------------------------------------------------------------->                              
